--- a/app/src/main/res/layout/act_tabbed_brewer2.xml
+++ b/app/src/main/res/layout/act_tabbed_brewer2.xml
@@ -7,17 +7,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/text1_1"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id='@+id/img1'/>
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:text="@string/history"
+    android:textAllCaps="true"
+    android:textSize="20sp"
+    android:id="@+id/text2_1"
+        android:gravity="center_horizontal" />
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/text1_2"/>
+        android:id="@+id/text2_2"/>
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="@string/howworks"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:id="@+id/text2_3"
+        android:gravity="center_horizontal" />
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:id="@+id/text2_4"/>
 
 
 
