--- a/app/src/main/res/layout/act_tabbed_brewer3.xml
+++ b/app/src/main/res/layout/act_tabbed_brewer3.xml
@@ -9,15 +9,15 @@
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/text1_1"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id='@+id/img1'/>
+        android:text="@string/steps"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:id="@+id/text3_1"
+        android:gravity="center_horizontal" />
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/text1_2"/>
+        android:id="@+id/text3_2"/>
 
 
 
