--- a/app/src/main/res/layout/act_tabbed_brewer.xml
+++ b/app/src/main/res/layout/act_tabbed_brewer.xml
@@ -9,11 +9,23 @@
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:textAllCaps="true"
+        android:textSize="26sp"
+        android:gravity="center_horizontal"
         android:id="@+id/text1_1"/>
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id='@+id/img1'/>
+        android:gravity="center"
+        android:id='@+id/img1' />
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="@string/overview"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:id="@+id/text1_3"
+        android:gravity="center_horizontal" />
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
