--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/grd"
     android:columnCount="2"
+    android:background="@drawable/coffeebkg"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_column="0"
+        android:layout_row="0"
+        android:layout_columnSpan="2"
+        android:text="Select a Coffee Brewing Technique to Learn About"
+        android:textSize="24sp"
+        android:layout_gravity="center"
+        android:textColor="#ddaa3508"
+        android:typeface="normal"
+        android:textStyle="bold" />
     <TextView android:text="@string/hotcoffee"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="#ddaa3508" />
     <Spinner
         android:id="@+id/spnHot"
         android:layout_gravity="fill_horizontal"/>
 
     <TextView android:text="@string/coldcoffee"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="#ddaa3508" />
     <Spinner
         android:id="@+id/spnCold"
         android:layout_gravity="fill_horizontal"/>
