--- a/app/src/main/res/layout/act_tabbed_brewer.xml
+++ b/app/src/main/res/layout/act_tabbed_brewer.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:background="@drawable/brewbkg22">
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="140dp"
+    >
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textAllCaps="true"
         android:textSize="26sp"
+        android:textStyle="bold"
+        android:textColor="#ddaa3508"
         android:gravity="center_horizontal"
         android:id="@+id/text1_1"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+
         android:id='@+id/img1' />
+
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:text="@string/overview"
-        android:textAllCaps="true"
-        android:textSize="20sp"
-        android:id="@+id/text1_3"
-        android:gravity="center_horizontal" />
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/text1_2"/>
+        android:id="@+id/text1_2"
+
+        android:textColor="#ddaa3508"/>
 
 
 
