--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,18 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnSpan="2"
+        android:layout_height="100dp"
         android:text="@string/select"
         android:textSize="24sp"
-        android:layout_gravity="center"
+        android:layout_columnSpan="2"
         android:textColor="#ddaa3508"
         android:textStyle="bold" />
 
     <TextView android:text="@string/hotcoffee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="1"
         android:textStyle="bold"
         android:textColor="#ddaa3508" />
 
@@ -31,6 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:layout_column="0"
+        android:layout_row="2"
         android:textColor="#ddaa3508" />
 
     <Spinner
