Fix for reminder, added about fragment

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
             android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
             android:id="@+id/menu_reports" >
     <menu>
-        <item   android:title="Main Menu"
+        <item   android:title="About"
                 android:showAsAction="ifRoom|withText"
 
                 android:id="@+id/menu_top"/>
