--- a/app/src/main/res/menu/menu_tabbed_brewer.xml
+++ b/app/src/main/res/menu/menu_tabbed_brewer.xml
@@ -1,6 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.apps.reinhardt2.love2brew.TabbedBrewer">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+<item   android:title="More"
+    android:showAsAction="ifRoom|withText"
+    android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
+    android:id="@+id/menu_tbb" >
+    <menu>
+        <item   android:title="Main Menu"
+            android:showAsAction="ifRoom|withText"
+
+            android:id="@+id/menu_mainmt"/>
+
+        <item   android:title="About"
+            android:showAsAction="ifRoom|withText"
+
+            android:id="@+id/menu_aboutt"/>
+
+        <item   android:title="Set Reminder"
+            android:showAsAction="ifRoom|withText"
+
+            android:id="@+id/menu_alarmt"/>
+    </menu>
+</item>
 </menu>
