--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -3,18 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/grd"
-    android:columnCount="3"
+    android:columnCount="4"
     android:background="@drawable/coffeebkg"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:text="@string/select"
-        android:textSize="@dimen/activity_font_top_port"
-        android:layout_columnSpan="2"
+        android:layout_columnSpan="4"
         android:textColor="#ddaa3508"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="@dimen/activity_font_top_land" />
 
     <TextView android:text="@string/hotcoffee"
         android:layout_width="wrap_content"
@@ -23,29 +23,29 @@
         android:layout_row="1"
         android:textStyle="bold"
         android:textColor="#ddaa3508"
-        android:textSize="@dimen/activity_font_sub_port" />
+        android:textSize="@dimen/activity_font_sub_land" />
 
     <Spinner
         android:id="@+id/spnHot"
-        android:layout_gravity="fill_horizontal"/>
+        android:layout_column="0"
+        android:layout_row="2"
+        android:layout_gravity="fill_horizontal"
+        android:layout_width="220dp" />
 
     <TextView android:text="@string/coldcoffee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:layout_column="0"
-        android:layout_row="2"
+        android:layout_column="1"
+        android:layout_row="1"
         android:textColor="#ddaa3508"
-        android:textSize="@dimen/activity_font_top_port" />
+        android:textSize="@dimen/activity_font_sub_land" />
 
     <Spinner
         android:id="@+id/spnCold"
-        android:layout_gravity="fill_horizontal"/>
-
-    <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_row="39"
-        android:layout_column="2"></TableLayout>
+        android:layout_column="1"
+        android:layout_row="2"
+        android:layout_gravity="fill_horizontal"
+        android:layout_width="220dp" />
 
 </GridLayout>
