--- a/app/src/main/res/layout/act_tabbed_brewer.xml
+++ b/app/src/main/res/layout/act_tabbed_brewer.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@drawable/brewbkg22">
+    android:layout_height="match_parent"
+    android:background="@drawable/brewbkg22"
+    >
+    <ScrollView
+        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        >
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="140dp"
+
     >
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textAllCaps="true"
-        android:textSize="26sp"
+        android:textSize="@dimen/activity_font_tab_header_port"
         android:textStyle="bold"
         android:textColor="#ddaa3508"
         android:gravity="center_horizontal"
@@ -30,9 +37,11 @@
         android:layout_width="match_parent"
         android:id="@+id/text1_2"
 
-        android:textColor="#ddaa3508"/>
+        android:textColor="#ddaa3508"
+        android:textSize="@dimen/activity_font_tab_body_port" />
 
 
 
 </LinearLayout>
 </ScrollView>
+    </LinearLayout>
