--- a/app/src/main/res/layout/act_tabbed_brewer3.xml
+++ b/app/src/main/res/layout/act_tabbed_brewer3.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@drawable/brewbkg22">
+    android:layout_height="match_parent"
+    android:background="@drawable/brewbkg22"
+    >
+    <ScrollView
+        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        >
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="140dp">
+    >
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -15,7 +22,7 @@
         android:textAllCaps="true"
         android:textStyle="bold"
         android:textColor="#ddaa3508"
-        android:textSize="20sp"
+        android:textSize="@dimen/activity_font_tab_header_port"
         android:id="@+id/text3_1"
         android:gravity="center_horizontal" />
     <TextView
@@ -23,9 +30,11 @@
         android:layout_width="match_parent"
 
         android:textColor="#ddaa3508"
-        android:id="@+id/text3_2"/>
+        android:id="@+id/text3_2"
+        android:textSize="@dimen/activity_font_tab_body_port" />
 
 
 
 </LinearLayout>
 </ScrollView>
+    </LinearLayout>
