--- a/app/src/main/res/values-v21/dimens.xml
+++ b/app/src/main/res/values-v21/dimens.xml
@@ -3,8 +3,8 @@
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
-    <dimen name="activity_font_top_land">40sp</dimen>
-    <dimen name="activity_font_sub_land">32sp</dimen>
-    <dimen name="activity_font_tab_header_land">38sp</dimen>
-    <dimen name="activity_font_tab_body_land">28sp</dimen>
+    <dimen name="activity_font_tab_header_port">36sp</dimen>
+    <dimen name="activity_font_tab_body_port">28sp</dimen>
+    <dimen name="activity_font_top_port">36sp</dimen>
+    <dimen name="activity_font_sub_port">32sp</dimen>
 </resources>
