--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -30,7 +30,8 @@
         android:layout_column="0"
         android:layout_row="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_width="220dp" />
+        android:layout_width="220dp"
+        android:spinnerMode="dialog" />
 
     <TextView android:text="@string/coldcoffee"
         android:layout_width="wrap_content"
@@ -46,6 +47,7 @@
         android:layout_column="1"
         android:layout_row="2"
         android:layout_gravity="fill_horizontal"
-        android:layout_width="220dp" />
+        android:layout_width="220dp"
+        android:spinnerMode="dialog" />
 
 </GridLayout>
