--- a/app/src/main/res/layout/act_tabbed_brewer.xml
+++ b/app/src/main/res/layout/act_tabbed_brewer.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/brewbkg22"
-    >
+    android:weightSum="1">
     <ScrollView
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
         >
 <LinearLayout
@@ -39,9 +39,14 @@
 
         android:textColor="#ddaa3508"
         android:textSize="@dimen/activity_font_tab_body_port" />
-
-
+    <ImageView
+        android:src="@drawable/brewlogo"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        />
 
 </LinearLayout>
 </ScrollView>
+
     </LinearLayout>
