--- a/app/src/main/res/layout-land/activity_front.xml
+++ b/app/src/main/res/layout-land/activity_front.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/coffeebkg"
+    android:background="@drawable/bkglandscape2"
     android:orientation="vertical">
 
         <TextView
@@ -14,8 +14,7 @@
         <ListView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@android:id/list"
-            >
+            android:id="@android:id/list">
 
             </ListView>
 
