--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -7,5 +7,8 @@
     <dimen name="activity_font_sub_land">44sp</dimen>
     <dimen name="activity_font_tab_header_land">40sp</dimen>
     <dimen name="activity_font_tab_body_land">30sp</dimen>
-    <dimen name="logo_height">250dp</dimen>
+
+    <dimen name="activity_listitem_name_port">36sp</dimen>
+    <dimen name="activity_listitem_temp_port">25sp</dimen>
+    <dimen name="logo_height">120dp</dimen>
 </resources>
