--- a/app/src/main/res/menu/menu_tabbed_brewer.xml
+++ b/app/src/main/res/menu/menu_tabbed_brewer.xml
@@ -10,7 +10,7 @@ xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
             android:id="@+id/menu_mainmt"/>
 
-        <item   android:title="About"
+        <item   android:title="Switch Brewers"
             android:showAsAction="ifRoom|withText"
 
             android:id="@+id/menu_aboutt"/>
