--- a/app/src/main/res/layout/brew_item.xml
+++ b/app/src/main/res/layout/brew_item.xml
@@ -12,7 +12,7 @@
         />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/logo_height"
         android:orientation="vertical">
     <TextView
         android:id="@+id/brw_name"
