--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -3,10 +3,12 @@
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
-    <dimen name="activity_font_top_land">42sp</dimen>
-    <dimen name="activity_font_sub_land">44sp</dimen>
+    <dimen name="activity_font_top_land">35sp</dimen>
+    <dimen name="activity_font_sub_land">26sp</dimen>
     <dimen name="activity_font_tab_header_land">40sp</dimen>
     <dimen name="activity_font_tab_body_land">30sp</dimen>
+    <dimen name="activity_font_tab_header_port">40sp</dimen>
+    <dimen name="activity_font_tab_body_port">34sp</dimen>
 
     <dimen name="activity_listitem_name_port">36sp</dimen>
     <dimen name="activity_listitem_temp_port">25sp</dimen>
